# libinternal_energy

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  USAGE.md
cmake/: FindVEDA.cmake
examples/: amd_test.cpp  hwmon_test.cpp  int_energy.cpp
include/internal_energy/: energy.hpp  event.hpp  helpers.hpp  measurement.hpp  metric.hpp  metric_set.hpp  perf.hpp  topology.hpp  util.hpp
include/internal_energy/hwmon/: hwmon.hpp
include/internal_energy/msr/: cpuinfo.hpp  metric.hpp
include/internal_energy/msr/amd/: metric.hpp
include/internal_energy/msr/intel/: metric.hpp
include/internal_energy/nec/: nec.hpp  nec_device.hpp  nec_sensors.hpp
include/internal_energy/nvml/: metric.hpp  nvidia_device.hpp  nvml.hpp
include/internal_energy/operators/: combinator.hpp  level_integrator.hpp
include/internal_energy/perf/: metric.hpp  perf.hpp
include/internal_energy/rocm_smi/: amd_device.hpp  metric.hpp  rocm_smi.hpp
include/internal_power/: power.hpp
include/internal_power/intel/: intel.hpp
src/: energy.cpp  metric.cpp  perf.cpp  power.cpp  topology.cpp
src/hwmon/: hwmon.cpp
src/intel/: intel.cpp
src/msr/: metric.cpp
src/msr/amd/: metric.cpp
src/msr/intel/: metric.cpp
src/nvml/: metric.cpp
src/operators/: combinator.cpp  level_integrator.cpp
src/perf/: metric.cpp  perf.cpp
src/rocm_smi/: metric.cpp
